welcome.lessons.welcome.methods.basics.Methods.scala.code
/**
 *  Avance, r?cup?re le biscuit, et le ram?ne ? la position d'origine
 *
 *  Ne v?rifie pas la pr?sence de mur; ? ne pas l'utiliser en cas de risques de mur.
 */

def goAndGet() {
  do {
    avance
  } while (!estSurBiscuit)
  prendbiscuit
  droite
  droite
  do {
    avance
  } while (!estFaceMur)
  poseBiscuit
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}